--- a/src/App.css
+++ b/src/App.css
@@ -346,6 +346,8 @@ input:where([type='button']),
 input:where([type='reset']),
 input:where([type='submit']) {
   -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
   /* 1 */
   background-color: transparent;
   /* 2 */
@@ -393,6 +395,9 @@ Correct the cursor style of increment and decrement buttons in Safari.
 
 [type='search'] {
   -webkit-appearance: textfield;
+  -moz-appearance: textfield;    /* 1 - Ensures consistency in Firefox */
+  appearance: textfield;         /* 1 - Standard property */
+
   /* 1 */
   outline-offset: -2px;
   /* 2 */
@@ -525,7 +530,7 @@ embed,
 object {
   display: block;
   /* 1 */
-  vertical-align: middle;
+  align-items: center;
   /* 2 */
 }
 
